samples/_failures_safe/1761393327_6f5b68_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3efd2d0a.c: In function ‘main’:
./samples/SAFE/__tmp_3efd2d0a.c:181: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_3efd2d0a.c:180:5: error: expected declaration or statement at end of input
  180 |     if
      |     ^~
